fix spacing

--- a/client/src/pages/landing/LandingPage.css
+++ b/client/src/pages/landing/LandingPage.css
@@ -18,6 +18,7 @@
     padding-top:4em;
     padding-left:3em;
     padding-bottom:4em;
+    padding-right:3em;
     border-radius: 60px;
     margin:0.5em;
     transition: all 0.2s ease-in-out;
